# org-tree-mcp

./: .gitmodules  Cargo.toml  README.org
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
crates/org-cli/: Cargo.toml
crates/org-cli/src/: main.rs
crates/org-parser/: Cargo.toml
crates/org-parser/src/: lib.rs  parser.rs  query.rs  query_examples.md  types.rs
examples/: literate-analysis.org  research-notes.org
queries/: directives.scm  outline-todo.scm  outline.scm  properties.scm  src-blocks.scm  timestamps.scm
