[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "org-mcp"
path = "src/main.rs"

[dependencies]
org-parser = { path = "../org-parser" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tree-sitter = { workspace = true }
